Removed role=button from span which is ancesstor of an anchor - not allowed in valid HTML

--- a/view/frontend/templates/component/image_teaser/slide_elements/cta.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/cta.phtml
@@ -10,15 +10,14 @@ $ctaLabel = $cta['label'] ?? '';
 ?>
 <?php if ($ctaHref and $ctaLabel): ?>
     <div class="cs-image-teaser__cta">
-        <span role="button"
-            class="cs-image-teaser__cta-button">
+        <span class="cs-image-teaser__cta-button">
             <span class="cs-image-teaser__cta-button-span"><?= $ctaLabel ?></span>
             <?= $this->getLayout()
                 ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
                 ->setIconUrl($block->getVar('image_teaser/cta_button_icon_path', 'MageSuite_ContentConstructorFrontend'))
                 ->setCssClass('cs-image-teaser__cta-button-icon')
                 ->setInlined(true)
-                ->toHtml(); 
+                ->toHtml();
             ?>
         </span>
     </div>
