<img> tag - Removed data-src and switched src to use original image

--- a/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
@@ -128,8 +128,7 @@ $isLazyLoaded = isset($imageTeaserData['type'])
             alt="<?= $imageAlt ?>"
 
             <?php if ($isLazyLoaded): ?>
-                data-src="<?= $origImageSrc ?>"
-                src="<?= $placeholderImageSrc ?>"
+                src="<?= $origImageSrc ?>"
                 <?php if ($imageSrcset): ?>
                     srcset="<?= $placeholderImageSrc ?>"
                     data-srcset="<?= $imageSrcset ?>"
