Added missing data-src for lazyload, which broke  teasers on ie11

--- a/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
@@ -106,7 +106,8 @@ $isLazyLoaded = isset($imageTeaserData['type'])
             alt="<?= $imageAlt ?>"
 
             <?php if ($isLazyLoaded): ?>
-                src="<?= $origImageSrc ?>"
+                src="<?= $placeholderImageSrc ?>"
+                data-src="<?= $origImageSrc ?>"
                 srcset="<?= $placeholderImageSrc ?>"
                 data-srcset="<?= $imageSrcset ?>"
             <?php else: ?>
