Added Short Description in the DailyDealDataProvider and core template

--- a/view/frontend/templates/component/daily_deal_teaser/product_description.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/product_description.phtml
@@ -1,1 +1,7 @@
-<div class="cs-daily-deal-teaser__description-inner"></div>
+<?php
+/** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\DailyDealTeaser */
+/** @var $viewModel \MageSuite\ContentConstructorFrontend\Model\Component\DailyDealTeaser */
+$viewModel = $block->getViewModel();
+$product = $viewModel->getProduct();
+?>
+<div class="cs-daily-deal-teaser__description-inner"><?= $product['shortDescription']; ?></div>
