P2G-1262 Style short description field on DD teaser

--- a/view/frontend/templates/component/daily_deal_teaser/product_description.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/product_description.phtml
@@ -4,4 +4,8 @@
 $viewModel = $block->getViewModel();
 $product = $viewModel->getProduct();
 ?>
-<div class="cs-daily-deal-teaser__description-inner"><?= $product['shortDescription']; ?></div>
+<div class="cs-daily-deal-teaser__description-inner">
+    <div class="cs-daily-deal-teaser__description-list">
+        <?= $product['shortDescription']; ?>
+    </div>
+</div>
