--- a/view/frontend/templates/component/daily_deal_teaser/daily_deal_counter.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/daily_deal_counter.phtml
@@ -5,24 +5,22 @@
 $viewModel = $block->getViewModel();
 $product = $viewModel->getProduct();
 
-$labels = [
-    'day' =>  __('Day'),
-    'days' =>  __('Days'),
-    'hour' =>  __('Hour'),
-    'hours' =>  __('Hours'),
-    'minute' =>  __('Min'),
-    'minutes' =>  __('Min'),
-    'second' =>  __('Sec'),
-    'seconds' =>  __('Sec')
-];
-
 ?>
 
 <div class="cs-daily-deal-teaser__dd-detail cs-daily-deal-teaser__dd-detail--countdown">
     <p class="cs-daily-deal-teaser__dd-headline cs-daily-deal-teaser__dd-headline--countdown"><?=__('Time left')?></p>
-
-    <div class="cs-dailydeal cs-dailydeal--teaser">
+    <!-- Data atrribute added until update to at least M2.3.4-p2 to fix translations-->
+    <div class="cs-dailydeal cs-dailydeal--teaser"
+        data-phrase-day="<?= __('Day') ?>"
+        data-phrase-days="<?= __('Days') ?>"
+        data-phrase-hour="<?= __('Hour') ?>"
+        data-phrase-hours="<?= __('Hours') ?>"
+        data-phrase-minute="<?= __('Min') ?>"
+        data-phrase-minutes="<?= __('Min') ?>"
+        data-phrase-second="<?= __('Sec') ?>"
+        data-phrase-seconds="<?= __('Sec') ?>"
+        >
         <div class="cs-dailydeal__countdown" data-dailydeal-end="<?=$product['dailyDealOffer']['to']?>"></div>
-        <input type="hidden" name="cs-dailydeal__countdown-labels" class="cs-dailydeal__countdown-labels" value='<?=json_encode($labels)?>'>
+        <input type="hidden" name="cs-dailydeal__countdown-labels" class="cs-dailydeal__countdown-labels">
     </div>
 </div>
